# pipeline-one

./: .env.example  .gitignore  README.md  REFERENCE_GUIDE.md  alembic.ini  docker-compose.yml  phase2_plan.md  pyproject.toml  requirements_backup.txt
alembic/: env.py
alembic/versions/: 20260108_200938_267e42c5aefa_initial_schema.py  20260109_add_stages_to_run.py  20260112_add_dataset_models.py  20260112_add_lineage_fields.py  20260113_add_curated_dataset_model.py  20260113_add_diversity_filter_settings.py  20260113_add_job_timing_fields.py  20260113_add_training_dataset_models.py  20260114_080211_bf9d894e327f_merge_curated_dataset_and_diversity_.py  20260114_add_job_performance_stats.py  20260114_add_storage_size_fields.py
backend/app/: config.py  constants.py  main.py
backend/app/api/: router.py
backend/app/core/: exceptions.py  logging.py
backend/app/db/: session.py
backend/app/models/: __init__.py  annotation.py  base.py  calibration.py  curated_dataset.py  dataset.py  export.py  external_annotation.py  frame.py  job.py  lineage.py  object_class.py  preset.py  track.py  training_dataset.py
backend/app/schemas/: annotation.py  cleanup.py  config.py  curated_dataset.py  data.py  dataset.py  export.py  file.py  job.py  review.py
backend/app/services/: annotation_service.py  benchmark_service.py  config_service.py  curated_dataset_service.py  data_service.py  dataset_service.py  diversity_service.py  export_service.py  job_service.py  lineage_service.py  review_service.py  storage_service.py  training_dataset_service.py
config/: default.yaml  object_classes.yaml
docs/: SVO2_to_Training_Dataset_User_Flows.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/hooks/: index.ts  (+6 more)
processing/: __init__.py
processing/export/: __init__.py  json_writer.py  kitti_writer.py
processing/reconstruction/: __init__.py  bbox_estimator.py  depth_projection.py  point_cloud.py
processing/sam3/: __init__.py  batch_processor.py  predictor.py
processing/svo2/: __init__.py  extractor.py  frame_registry.py  reader.py
processing/tracking/: __init__.py  bytetrack.py  track_manager.py
scripts/: backfill_storage_sizes.py  check_sam3_access.py  cleanup_orphans.py  download_sam3.py  generate_pdf_guide.py  setup_dev.sh  setup_zed_sdk.sh  verify_gpu.py
worker/: __init__.py  celery_app.py  db.py
worker/tasks/: __init__.py  annotations.py  dataset.py  extraction.py  orchestrator.py  reconstruction.py  segmentation.py  tracking.py  training_export.py
(+92 files in other folders)
